fixed weird scroll glitch on mobile that was caused by defaulting min view height to 100vh

--- a/src/MainContent.css
+++ b/src/MainContent.css
@@ -14,6 +14,7 @@
     margin-left: 250px;
     margin-right: 0;
     margin-top: 0;
+    margin-bottom: 0;
     /* Aligns with desktop sidebar width */
     min-height: 100vh;
     /* max-width: 70vw; */
@@ -120,7 +121,8 @@
 @media (max-width: 768px) {
     .main-viewport {
         margin-left: 0;
-        padding: 100px 24px 40px 24px;
+        padding: 90px 24px 10px 24px;
+        min-height: 50vh;
     }
 
     .image-overlay-container {
